Revert "Merge branch 'executablebooks:master' into master"
This reverts commit fc9f12875aa3204a629dbb14a1d7608fdf7d194c, reversing
changes made to da61f766d49ed1f53d253d216cb43ccd8b81a722.

--- a/tests/test_build/test_sidenote.html
+++ b/tests/test_build/test_sidenote.html
@@ -37,14 +37,7 @@
    <sup>
     3
    </sup>
-   This is
-   <em>
-    another
-   </em>
-   <strong>
-    sidenote
-   </strong>
-   .
+   This is another sidenote.
   </span>
  </p>
 </section>
